# awardchaser-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  models.py
app/api/v1/: optimize.py  scrape.py
app/core/: config.py  llm.py  retrieval.py  tools.py
app/services/: __init__.py  ingest.py  scraper.py
src/awardchaser_backend/: __init__.py
